force-app/main/default/objects/CLQ_Staff_Record__c/CLQ_Staff_Record__c.object-meta.xml
<CustomObject>
    <description>Provides an overview of all staff members employed by the Program.</description>
    <label>Staff Record</label>
    <nameField>
        <displayFormat>Staff #{000000}</displayFormat>
        <label>Staff Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>