force-app/main/default/objects/CLQ_Staff_Record__c/fields/Biennium_Hours_Current__c.field-meta.xml
<CustomField>
    <fullName>Biennium_Hours_Current__c</fullName>
    <description>biennium_current_hours from API</description>
    <label>Biennium Hours Current</label>
    <length>10</length>
    <type>Text</type>
</CustomField>