force-app/main/default/objects/CLQ_Staff_Record__c/fields/Biennium_Hours_Previous__c.field-meta.xml
<CustomField>
    <fullName>Biennium_Hours_Previous__c</fullName>
    <description>biennium_previous_hours from API</description>
    <label>Biennium Hours Previous</label>
    <length>10</length>
    <type>Text</type>
</CustomField>