force-app/main/default/objects/CLQ_Staff_Record__c/fields/child_development__c.field-meta.xml
<CustomField>
    <fullName>child_development__c</fullName>
    <description>child_development from API</description>
    <label>child development</label>
    <length>50</length>
    <type>Text</type>
</CustomField>