force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_BCI_Processed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_BCI_Processed__c</fullName>
    <label>BCI Processed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>ODE - Not available</fullName>
            </value>
            <value>
                <fullName>ODE - Not updated</fullName>
            </value>
            <value>
                <fullName>ODJFS - Not Requested</fullName>
            </value>
            <value>
                <fullName>ODJFS - Results Not Received</fullName>
            </value>
            <value>
                <fullName>ODJFS - No Update</fullName>
            </value>
            <value>
                <fullName>ODJFS - Results Not Sent to Program</fullName>
            </value>
            <value>
                <fullName>ODJFS - Results Not Sent to State</fullName>
            </value>
            <value>
                <fullName>ODJFS - Results Not Onsite</fullName>
            </value>
            <value>
                <fullName>ODJFS - Returned, Not Resubmitted</fullName>
            </value>
            <value>
                <fullName>ODJFS - Rehired, No Update</fullName>
            </value>
            <value>
                <fullName>ODJFS - Conviction/Child Removed</fullName>
            </value>
            <value>
                <fullName>ODJFS - No Rehabilitation Doc</fullName>
            </value>
            <value>
                <fullName>ODJFS - Previous employer’s record on file</fullName>
            </value>
            <value>
                <fullName>ODJFS - Incomplete results</fullName>
            </value>
            <value>
                <fullName>ODJFS - Refused to be fingerprinted</fullName>
            </value>
            <value>
                <fullName>ODJFS - Pending verification</fullName>
            </value>
            <value>
                <fullName>ODJFS - Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>