force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_BCI_Validated_by_Nightly_Process__c.field-meta.xml
<CustomField>
    <fullName>CLQ_BCI_Validated_by_Nightly_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCI Validated by Nightly Process</label>
    <type>Checkbox</type>
</CustomField>