force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_CA__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CA__c</fullName>
    <label>Child Abuse Prevention</label>
    <type>Date</type>
</CustomField>