force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Career_Pathways_Level__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Career_Pathways_Level__c</fullName>
    <label>Career Pathways Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>