force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_CDA_Verified__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CDA_Verified__c</fullName>
    <inlineHelpText>Select Yes if CDA Verified</inlineHelpText>
    <label>CDA Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>