force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Communicable_Disease__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Communicable_Disease__c</fullName>
    <label>Communicable Disease</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Trainer Qualifications</fullName>
            </value>
            <value>
                <fullName>Form Not Complete</fullName>
            </value>
            <value>
                <fullName>Form Does Not Meet Req.</fullName>
            </value>
            <value>
                <fullName>No Original Course</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>