force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_CPR__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CPR__c</fullName>
    <label>CPR Training</label>
    <type>Date</type>
</CustomField>