force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Current_Period_End__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_Period_End__c</fullName>
    <label>Biennium End Date</label>
    <type>Date</type>
</CustomField>