force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Driver_s_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Driver_s_License_Expiration_Date__c</fullName>
    <label>Driver’s License Expiration Date</label>
    <type>Date</type>
</CustomField>