force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Driver_s_License_on_File__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Driver_s_License_on_File__c</fullName>
    <label>Driver’s License on File</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>License Not on File</fullName>
            </value>
            <value>
                <fullName>License Expired</fullName>
            </value>
            <value>
                <fullName>Non-Valid License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>