force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Driver_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Driver_Training_Completed__c</fullName>
    <label>Driver Training Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>No Driver Training</fullName>
            </value>
            <value>
                <fullName>Training Expired</fullName>
            </value>
            <value>
                <fullName>Falsified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>