force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Driver_Training_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Driver_Training_Expiration_Date__c</fullName>
    <label>Driver Training Expiration Date</label>
    <type>Date</type>
</CustomField>