force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Education_Verified__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Education_Verified__c</fullName>
    <label>Education Verified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>No Educational Verification</fullName>
            </value>
            <value>
                <fullName>Not High School Grad</fullName>
            </value>
            <value>
                <fullName>HS Needs Translated/Equivalency</fullName>
            </value>
            <value>
                <fullName>Home School Documentation Missing</fullName>
            </value>
            <value>
                <fullName>Missing Refugee Documentation</fullName>
            </value>
            <value>
                <fullName>Vocational Information Missing</fullName>
            </value>
            <value>
                <fullName>College Credit Information Missing</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>