force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Endorsement__c</fullName>
    <label>Endorsement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>