force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Expiration_Date__c</fullName>
    <description>CDA Expiration Date.</description>
    <label>CDA Expiration Date</label>
    <type>Date</type>
</CustomField>