force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_FA__c.field-meta.xml
<CustomField>
    <fullName>CLQ_FA__c</fullName>
    <label>First Aid</label>
    <type>Date</type>
</CustomField>