force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_FBI__c.field-meta.xml
<CustomField>
    <fullName>CLQ_FBI__c</fullName>
    <label>FBI</label>
    <type>Date</type>
</CustomField>