force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Highest_Verified_Education_Level__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Highest_Verified_Education_Level__c</fullName>
    <label>Highest Verified Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>GED Earned</fullName>
            </value>
            <value>
                <fullName>2 year-vocational</fullName>
            </value>
            <value>
                <fullName>No Degree</fullName>
            </value>
            <value>
                <fullName>Diploma in Nursing</fullName>
            </value>
            <value>
                <fullName>AA or AS</fullName>
            </value>
            <value>
                <fullName>AAN or ASN</fullName>
            </value>
            <value>
                <fullName>BA or BS</fullName>
            </value>
            <value>
                <fullName>BAN or BSN</fullName>
            </value>
            <value>
                <fullName>Graduate Level, No Degree</fullName>
            </value>
            <value>
                <fullName>Master&apos;s Degree or M. Ed</fullName>
            </value>
            <value>
                <fullName>Graduate level beyond Masters</fullName>
            </value>
            <value>
                <fullName>Ph. D.</fullName>
            </value>
            <value>
                <fullName>Type B Prior to 2003</fullName>
            </value>
            <value>
                <fullName>In 2nd year of Vocational School</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>