force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Hire_Date__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>