force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Staff Records</relationshipLabel>
    <relationshipName>Staff_Records</relationshipName>
    <type>Lookup</type>
</CustomField>