force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Major_Highest_Education_Level__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Major_Highest_Education_Level__c</fullName>
    <label>Major - Highest Education Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>