force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Major_Highest_Verified_Education__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Major_Highest_Verified_Education__c</fullName>
    <label>Major - Highest Verified Education  Leve</label>
    <length>100</length>
    <type>Text</type>
</CustomField>