force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_MCD__c.field-meta.xml
<CustomField>
    <fullName>CLQ_MCD__c</fullName>
    <label>Management of Communicable Disease</label>
    <type>Date</type>
</CustomField>