force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Medical__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Medical__c</fullName>
    <label>Medical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Compliance</fullName>
                <isActive>false</isActive>
                <label>In Compliance</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>N/V</fullName>
                <isActive>false</isActive>
                <label>N/V</label>
            </value>
            <value>
                <fullName>Out of Compliance</fullName>
                <isActive>false</isActive>
                <label>Out of Compliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>