force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Medical_on_File__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Medical_on_File__c</fullName>
    <label>Medical on File</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>No Medical</fullName>
            </value>
            <value>
                <fullName>Medical Not Within 1 Year</fullName>
            </value>
            <value>
                <fullName>Date of Exam Missing</fullName>
            </value>
            <value>
                <fullName>Signature Missing</fullName>
            </value>
            <value>
                <fullName>Doctor Info Missing</fullName>
            </value>
            <value>
                <fullName>Doctor Does Not Meet</fullName>
            </value>
            <value>
                <fullName>Immunization Info Missing</fullName>
            </value>
            <value>
                <fullName>Required Statement Missing</fullName>
            </value>
            <value>
                <fullName>Requested Exam Needed</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>