force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staff Records</relationshipLabel>
    <relationshipName>Staff_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>