force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_NCS_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_NCS_Expiration_Date__c</fullName>
    <label>NCS Expiration Date</label>
    <type>Date</type>
</CustomField>