force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Non_Conviction_Statement__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Non_Conviction_Statement__c</fullName>
    <label>Non-Conviction Statement Date</label>
    <type>Date</type>
</CustomField>