force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Non_conviction_Statement_Signed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Non_conviction_Statement_Signed__c</fullName>
    <label>Non-conviction Statement Signed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>ODE - Not available</fullName>
            </value>
            <value>
                <fullName>Missing Signature</fullName>
            </value>
            <value>
                <fullName>ODE - Not updated</fullName>
            </value>
            <value>
                <fullName>ODJFS - No Statement on File</fullName>
            </value>
            <value>
                <fullName>ODJFS - No Annual Update</fullName>
            </value>
            <value>
                <fullName>ODJFS - Dates Missing</fullName>
            </value>
            <value>
                <fullName>ODJFS - Admin. Signature Missing</fullName>
            </value>
            <value>
                <fullName>ODJFS - Missing Back Page</fullName>
            </value>
            <value>
                <fullName>ODJFS - Pending verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>