force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_ODJFS_Approval_Letter__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ODJFS_Approval_Letter__c</fullName>
    <label>ODJFS Approval Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>