force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_OPIN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OPIN__c</fullName>
    <label>OPIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>