force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_PD_Class1_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PD_Class1_Hours__c</fullName>
    <label>PD Class1 Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>