force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_PD_Class2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PD_Class2__c</fullName>
    <label>PD Class2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>