force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_PD_Class2_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PD_Class2_Date__c</fullName>
    <label>PD Class2 Date</label>
    <type>Date</type>
</CustomField>