force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_PD_Class2_Taken__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PD_Class2_Taken__c</fullName>
    <label>PD Class2 Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>