force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Policy_Statement__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Policy_Statement__c</fullName>
    <label>Policy Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Out of Compliance</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>N/V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>